--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -1,11 +1,11 @@
 $grid_columns: 12;
 $grid_gutter: 8px;
 $grid_padding: (
-  xl: 1rem,
-  lg: 1rem,
-  md: 1rem,
-  sm: 1rem,
-  xs: 1rem,
+  xl: 0,
+  lg: 0,
+  md: 0,
+  sm: 0,
+  xs: 0,
 );
 
 .grid {
