--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -52,7 +52,8 @@ strong,
   font-weight: 500;
 
   font-size: 27vw;
-  line-height: 30vw;
+  line-height: 19vw;
+  transform: translateY(1.39vw);
   letter-spacing: -0.02em;
 }
 
