--- a/src/scss/transitions.scss
+++ b/src/scss/transitions.scss
@@ -25,6 +25,9 @@ $fast-transition: $fast-transition-speed $ease-out-cubic;
 
 .transition-opacity {
   transition: $default-transition opacity;
+  &--slow {
+    transition: $slow-transition opacity;
+  }
 }
 
 .transition-transform {
